# ManifoldGMM

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.org  CLAUDE.md  CONTRIBUTING.org  LICENSE.org  Makefile  README.org  pyproject.toml
.coder-session/: agent_prefs.json
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/optimize_wald_20260204/: metadata.json
conductor/archive/wald_test_20260204/: metadata.json  plan.md  spec.md
conductor/tracks/cue_stabilization_20260204/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/optimize_wald_20260204/: index.md  plan.md  spec.md
conductor/tracks/psd_wald_20260204/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/wald_test_20260204/: index.md  plan.md
docs/: index.org
docs/automation/: sample_status_log.org  status_log.org
docs/design/: architecture.org  autodiff.org  confidence_regions.org  dgp.org  feature_requests.org  gmm_class.org  gmm_inference.org  k_statistic.org  separation_of_concerns.org  v2_dgp.org  v2_phase_c_data_ignorance.org  wild_bootstrap.org
docs/examples/: bootstrap_coverage.org  circular_mean_inference.org  gaussian_location_covariance.org  manifold_point_getting_started.org  my_circle.org  my_circle.py  psd_fixed_rank_inference.org  wald_test_example.org
docs/howto/: collaboration_preferences.org  datamat_to_jax.org  org_example_style.org  release_checklist.org
docs/release/: notes_0.2.0a1.org  notes_0.3.0a1.org  notes_0.4.0.org  notes_0.4.0a1.org
docs/standards/: naming_notation.org
examples/: __init__.py
scripts/: debug_euc_wald.py  generate_power_curve.py  pre-push.sh  psd_power_curve.py  release.py
src/manifoldgmm/: __init__.py  _jax_config.py  _warnings.py
src/manifoldgmm/autodiff/: __init__.py  jax_backend.py
src/manifoldgmm/econometrics/: __init__.py  _linearity.py  bootstrap.py  gmm.py  moment_restriction.py  simulation.py
src/manifoldgmm/geometry/: __init__.py  manifold.py  point.py
src/manifoldgmm/optimizers/: __init__.py  logging_trust_regions.py
src/manifoldgmm/utils/: numeric.py
tests/: __init__.py  test_cost_is_jitted.py  test_float64_enforcement.py  test_logging_trust_regions.py  test_optimizer_kwargs_forwarding.py  test_placeholder.py
tests/autodiff/: test_jax_jacobian.py
tests/econometrics/: __init__.py  test_asymptotic_region.py  test_bootstrap.py  test_bootstrap_parallel.py  test_bootstrap_penalty.py  test_compute_hessian_cond_gauge.py  test_cue_stabilization.py  test_datamat_to_jax_helper.py  test_diagnostics_namespace.py  test_gaussian_example.py  test_geodesic_distance.py  test_gmm.py  test_j_statistic.py  test_k_statistic.py  test_k_statistic_bootstrap.py  test_moment_restriction.py  test_moment_vmap_regression.py  test_penalty.py  test_psd_wald_comparison.py  test_simulation.py  test_wald_monte_carlo.py  test_wald_test.py  test_with_clusters_with_weights_deprecation.py
tests/examples/: test_circle_mean.py
tests/geometry/: test_manifold_point_basic.py  test_manifold_point_psd.py
tests/utils/: __init__.py  datamat_to_jax.py  test_ridge_inverse.py
tests/v2/: __init__.py  bernoulli_v2.py  gaussian_mixture_v2.py  test_bernoulli_v2.py  test_dgp_e2e.py  test_gaussian_mixture_v2.py  test_linearity.py  test_omega_hat_delegates_to_dgp.py  test_parity_bootstrap_methodologies.py  test_parity_clustered_theta.py  test_parity_cue_two_step.py  test_parity_inference_stats.py  test_parity_wild_bootstrap.py  test_two_way_fe_v2.py  two_way_fe_v2.py
tools/: check_docstrings.py  ob-fold-hidden.el
