[project]
name = "manifoldgmm"
version = "0.1.0"
description = "Generalized Method of Moments estimation on Riemannian manifolds."
readme = "README.org"
requires-python = ">=3.11,<4.0"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Ethan Ligon", email = "ligon@berkeley.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pymanopt @ git+https://github.com/pymanopt/pymanopt.git",
]

[project.optional-dependencies]
jax = ["jax>=0.4.25"]

[tool.poetry]
package-mode = true
packages = [{ include = "manifoldgmm", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
