[project]
name = "manifoldgmm"
version = "0.1.0"
description = "Generalized Method of Moments estimation on Riemannian manifolds."
readme = "README.org"
requires-python = ">=3.11,<4.0"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [{ name = "Ethan Ligon", email = "ligon@berkeley.edu" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent"
]
dependencies = [
  "pymanopt @ git+https://github.com/pymanopt/pymanopt.git",
  "metrics-miscellany (>=0.2.5,<0.3.0)",
]

[project.optional-dependencies]
jax = ["jax>=0.4.25"]

[tool.poetry]
package-mode = true
packages = [{ include = "manifoldgmm", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ipython = "^8.26.0"
matplotlib = "^3.10.7"
ruff = "^0.5.4"
black = "^24.4.2"
mypy = "^1.10.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py311"]
line-length = 88
extend-exclude = "third_party"

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["jax", "numpy", "pymanopt"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
